2007-05-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* diff-mode.el (diff-apply-hunk, diff-test-hunk): Don't do by default
	the exact opposite of diff-goto-source.

	* emacs-lisp/advice.el (ad-special-forms): Remove.
	(ad-special-form-p): Use subr-arity.

	* newcomment.el (comment-search-forward): Make sure we search forward.
	(comment-enter-backward): Try and distinguish the non-matching case at
	EOB from the non-matching case with a missing comment-end-skip for
	a 2-char comment ender.
	(comment-choose-indent): New function extracted from comment-indent.
	Improve the alignment algorithm.
	(comment-indent): Use it.

	* textmodes/sgml-mode.el (sgml-lexical-context): Add handling of
	XML style Processing Instructions.
	(sgml-parse-tag-backward): Handle XML-style PIs.  Also ensure progress.
	(sgml-calculate-indent): Handle `pi' context.

	* vc.el: Ensure that update-changelog issues an error when used with
	a backend that does not implement it.
	(vc-update-changelog-rcs2log): Rename from vc-default-update-changelog.
	Remove `backend' argument.  Use expand-file-name.
	(vc-cvs-update-changelog, vc-rcs-update-changelog): New aliases.

	* progmodes/python.el (python-end-of-block): Revert last change.
	(python-end-of-statement): Make sure we move *forward*.

2007-05-08  David Reitter  <david.reitter@gmail.com>

	* progmodes/python.el (python-guess-indent): Check non-nullness
	before comparing indent against the 2..8 interval.

2007-05-07  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* term/mac-win.el (mac-ts-unicode-for-key-event): Check if text is
	available.

2007-05-06  Richard Stallman  <rms@gnu.org>

	* emacs-lisp/eldoc.el (turn-on-eldoc-mode): Doc fix.

2007-05-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* diff.el (diff): Use buffer-local vars diff-old-file and diff-new-file
	rather than storing their value in the revert-buffer function.

2007-05-04  Nick Roberts  <nickrob@snap.net.nz>
